// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gQhLwa"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 cFsRYN"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gOVGlS"
            >
              last quarter sales
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Value  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dYebPD"
    >
      <span
        class="StyledText-sc-1sadyjn-0 cFsRYN"
      >
        30%
      </span>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 iCrgvf"
      >
        <span
          class="StyledText-sc-1sadyjn-0 gOVGlS"
        >
          a descriptive label
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Value  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dYebPD"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dfYOnT"
      >
        <span
          class="StyledText-sc-1sadyjn-0 iYKISq"
        >
          30%
        </span>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
        />
        <svg
          aria-label="Down"
          class="StyledIcon-ofa7kd-0 ejCNex"
          viewBox="0 0 24 24"
        >
          <polyline
            fill="none"
            points="7.086 3.174 17.086 13.174 7.086 23.174"
            stroke="#000"
            stroke-width="2"
            transform="scale(1 -1) rotate(-89 -1.32 0)"
          />
        </svg>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 iCrgvf"
      >
        <span
          class="StyledText-sc-1sadyjn-0 gOVGlS"
        >
          custom value
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Value  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dYebPD"
    >
      <span
        class="StyledText-sc-1sadyjn-0 kJPzWn"
      >
        30%
      </span>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 iCrgvf"
      >
        <span
          class="StyledText-sc-1sadyjn-0 fgFVYY"
        >
          status-ok
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Value  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gQhLwa"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 jTpdaz"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gOVGlS"
            >
              normal
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 cFsRYN"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gOVGlS"
            >
              bold
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eArKQg"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gOVGlS"
            >
              400
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Value  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gQhLwa"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 fHOLAh"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gJdaHr"
            >
              xsmall
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eNnSXE"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gJdaHr"
            >
              small
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 JhXAc"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gJdaHr"
            >
              medium
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 cFsRYN"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gOVGlS"
            >
              large
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 kGNBmq"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 DkZvS"
            >
              xlarge
            </span>
          </div>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD"
        >
          <span
            class="StyledText-sc-1sadyjn-0 eTkzRk"
          >
            30%
          </span>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iCrgvf"
          >
            <span
              class="StyledText-sc-1sadyjn-0 eLOxHb"
            >
              xxlarge
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
